# Synapse.ai

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: .env.example  main.py
app/core/: anki_generator.py
app/schema/: __init__.py  flash_card.py  flash_card_collection.py  task_status.py
app/utils/: processor.py
